2005-01-31 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * src/gdcmBinEntry.cxx : bug fix for BIG_ENDIAN part when writing the content
   * gdcmPython/gdcm.i : rename gdcmHeader to gdcmHelper

2005-02-02 Jean-Pierre Roux <jpr@creatis.univ-lyon1.fr>
   * FIX SQItem::AddEntry inserts now *in the right place* any Entry
              (Dicom Element) into the Sequence Item

2005-01-31 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * src/*.cxx : first parss to normalize file organisation

2005-01-31 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * src/gdcmDirList.[h|cxx] : add method to find a directory
   * Test/TestAllReadCompareDicom.cxx : bug fix under Windows

2005-01-31 Mathieu Malaterre  <Mathieu.Malaterre@creatis.insa-lyon.fr>
   * Finish cleaning up my JPEG mess. Should be ok now.
   * Getting toward a RLE very similar to JPEG. Every RLE stuff is now self
	  contained within the RLE* class(doh!)

2005-01-30 Jean-Pierre Roux <jpr@creatis.univ-lyon1.fr>
   * SerieHeader::SetDirectory() allow recursive exploration of the Directory
	* SerieHeader::AddFileName() creates as many Coherent Files lists 
	              (same Serie UID) as it founds different Serie UID 
					   amongst the files instead of discarting any file 
						that doesn't match with the first one he found.
	* SerieHeader::OrderGdcmFileList has now one parameter : 
	               the Coherent Files list the user wants to sort
   * SerieHeader::GetFirstCoherentFileList()  |
   * SerieHeader::GetLastCoherentFileList()   | allow to parse 
	               the set of Coherent Files lists 
   * const SerieHeader::GdcmFileList &GetGdcmFileList() is kept, for backwards
	               compatibility (it returns the *first* Coherent Files list, 
						since there was only one before)
	* Test/TestSerieHeader gets gdcmData as a default root directory		
					  
2005-01-28 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * Remove friend between DocEntry and File classes